# MFG

./: .gitignore  CMakeLists.txt  README.md
malgo/: CMakeLists.txt  malgo.h
mfg/: CMakeLists.txt  common.cpp  common.h  consts.cpp  consts.h  solver1.cpp  utils.h
mfgl/: CMakeLists.txt  common.h  consts.cpp  consts.h  solver1.cpp  utils.h
mfgt/: CMakeLists.txt
mfgt/lib/gtest-1.7.0/: Makefile.in  aclocal.m4  configure
mfgt/lib/gtest-1.7.0/build-aux/: install-sh  ltmain.sh  missing
mfgt/lib/gtest-1.7.0/include/gtest/: gtest-param-test.h.pump
mfgt/lib/gtest-1.7.0/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-tuple.h.pump  gtest-type-util.h.pump
mfgt/tests/: CMakeLists.txt  tests.cpp
tests/lib/gtest-1.7.0/: Makefile.in  aclocal.m4  configure
tests/lib/gtest-1.7.0/build-aux/: config.guess  config.sub  depcomp  ltmain.sh
tests/lib/gtest-1.7.0/fused-src/gtest/: gtest-all.cc  gtest.h
tests/lib/gtest-1.7.0/include/gtest/: gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h
tests/lib/gtest-1.7.0/m4/: libtool.m4
tests/lib/gtest-1.7.0/scripts/: fuse_gtest_files.py  gtest-config.in
tests/lib/gtest-1.7.0/src/: gtest-internal-inl.h  gtest.cc
tests/lib/gtest-1.7.0/test/: gtest-printers_test.cc  gtest-tuple_test.cc  gtest_env_var_test.py  gtest_output_test.py  gtest_output_test_golden_lin.txt  gtest_shuffle_test.py  gtest_throw_on_failure_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
tests/tests/: CMakeLists.txt  malgo_tests.cpp  mfg_tests.cpp  misc_tests.cpp
(+5 files in other folders)
